# poia

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CITATION.cff  LICENSE  Makefile  README.md  mo_intro.py  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml  test_with_tox.yml
notebooks/: mo_intro.py
notebooks/public/: nilearn_repos.csv
poia/: content.csv  most_used_private_functions.py  poia.py
poia/public/: content.json  dependents.json  functions_used.csv  ignore.json  repositories.json
poia/public/nilearn/: content.json  content.tsv  dependents.json  functions_used.csv  ignore.json
poia/tmp/: nilearn_content.json  nilearn_repositories.json
scripts/: build.py
src/poia/: usage.py
