[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "POIA developers"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "ipython==9.1.0",
    "marimo",
    "matplotlib==3.10.1",
    "matplotlib-venn==1.1.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "plotly==6.0.1",
    "requests==2.32.3",
    "rich==14.0.0",
    "toml==0.10.2"
]
description = "Package Of Interest Auditor"
# Version from setuptools_scm
dynamic = ["version"]
license = {text = "new BSD"}
maintainers = [{name = "Rémi Gau", email = "remi.gau@inria.fr"}]
name = "poia"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
# For running unit and docstring tests
test = [
    "pytest>=6.0.0"
]

[project.urls]
Homepage = "https://www.github.com/Remi-Gau/poia"

[tool.codespell]
builtin = "clear,rare,en-GB_to_en-US"
skip = "./.git,*.cff,*/tmp,.mypy_cache,env,venv"

[tool.hatch.build.hooks.vcs]
version-file = "poia/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["poia"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
allow_redefinition = false
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = ['**/tests/test_.*', 'poia/_version.py']
warn_unreachable = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "plotly.*",
    "rich.*",
    "matplotlib.*",
    "nbformat.*",
    "nbconvert.*",
    "packaging.*",
    "matplotlib_venn.*",
    "marimo.*",
    "IPython.*"
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers -s -vv"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
log_cli_level = "INFO"
minversion = "6.0"
xfail_strict = true

[tool.ruff]
include = ["pyproject.toml", "poia"]
indent-width = 4
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = [
    "B018",
    "N806",
    "N803",
    "N802",
    "D103",
    "PD901",
    "PLR2004",
    # https://github.com/astral-sh/ruff/issues/7871
    # Avoid linter rules conflicting with the formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "PD",
    "PGH",
    "PLR",
    "RUF",
    "SIM",
    "UP",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 29

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 15
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 33
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 10
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 80
